svc3.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service3
#  annotations:
#    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
